--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>manywind2009.github.io</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+    <div id="counter-area">
+        <p>Visitor: <span class="counter-num">000456</span></p>
+    </div>
+
+    <header>
+        <div class="container header-flex">
+            <h1>My Website</h1>
+            <div class="site-id">manywind2009.github.io</div>
+        </div>
+    </header>
+
+    <nav class="main-nav">
+        <ul class="container">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+
+    <main class="container">
+        </main>
+
+</body>
+</html>
