--- a/index.html
+++ b/index.html
@@ -3,6 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Website</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <div id="counter-area">
+        <p>あなたは $n$ 人目の訪問者です</p>
+        <div class="counter-placeholder">000123</div>
+    </div>
+
+    <header>
+        <div class="container">
+            <h1>Site Title</h1>
+            <nav>
+                <ul>
+                    <li><a href="#">Top</a></li>
+                    <li><a href="#">About</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main class="container">
+        </main>
+
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>manywind2009.github.io</title>
     <link rel="stylesheet" href="style.css">
 </head>
